# chkp-cpuse-orch

./: .claudeignore  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/memory/: MEMORY.md  architecture.md  cdt-cpuse-domain.md  clusterxl-live-state.md  credential-sets.md  env-example-sync.md  environment-kind.md  firewall-discovery-domain-picker.md  git-workflow.md  mds-discovery-command.md  mds-domain-per-firewall.md  no-ssh-for-cluster-name.md  optional-credential-storage.md  patching-web-design.md  project-overview.md  provisioning-command-order.md  safety-constraints.md  security-hygiene.md  tech-stack.md  use-documentation-tool-mcp.md  web-auth.md
examples/: config.example.yaml  inventory.example.yaml
scripts/: deploy.sh
src/chkp_cpuse_orch/: __init__.py  archive.py  cdt.py  checks.py  cli.py  clusterxl.py  config.py  cpuse.py  credentials.py  errors.py  hfconfig.py  inventory.py  jobs.py  orchestrator.py  packages.py  reporting.py  store.py
src/chkp_cpuse_orch/services/: __init__.py  cdt_ops.py  common.py  cred_ops.py  discovery.py  environments.py  firewalls.py  patching.py  pkgs_ops.py  prov_ops.py  provisioning.py
src/chkp_cpuse_orch/transport/: __init__.py  gaia_api.py  mgmt_api.py  ssh.py
src/chkp_cpuse_orch/web/: __init__.py  app.py  auth.py
src/chkp_cpuse_orch/web/static/: index.html  login.html
src/chkp_cpuse_orch/web/static/css/: app.css
src/chkp_cpuse_orch/web/static/js/: app.js  login.js
tests/: conftest.py  fakes.py  test_archive.py  test_auth.py  test_cdt.py  test_cdt_service.py  test_clusterxl.py  test_config.py  test_cpuse.py  test_cred_ops.py  test_credentials.py  test_discovery.py  test_environments.py  test_firewalls.py  test_hfconfig.py  test_inventory.py  test_jobs.py  test_mgmt_api.py  test_orchestrator.py  test_packages.py  test_patching_service.py  test_pkgs_ops.py  test_prov_ops.py  test_provisioning.py  test_store.py  test_transport_ssh.py  test_web_api.py
