[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chkp-cpuse-orch"
dynamic = ["version"]  # single source: chkp_cpuse_orch.__version__
description = "Orchestration layer for Check Point's Central Deployment Tool (CDT/CPUSE) — staged, health-gated patching and upgrades across management servers and gateways."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "chkp-cpuse-orch contributors" }]
keywords = ["check-point", "cdt", "cpuse", "firewall", "orchestration", "patching"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "paramiko>=3.4",
  "pyyaml>=6.0",
  "rich>=13.7",
  "structlog>=24.1",
  "httpx>=0.27",
  "tenacity>=8.2",
  "cryptography>=42.0",
  "passlib>=1.7",  # sha512-crypt hashes for Gaia `set user ... password-hash`
]

[project.optional-dependencies]
web = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",  # multipart parsing for package uploads
  "ldap3>=2.9",  # LDAP/Active Directory authentication for the web UI
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-paramiko",
  "types-PyYAML",
  "types-passlib",
]

[project.scripts]
chkp-cpuse-orch = "chkp_cpuse_orch.cli:app"

[tool.setuptools.dynamic]
version = { attr = "chkp_cpuse_orch.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the hand-editable static UI (HTML/CSS/JS) inside the wheel/container.
"chkp_cpuse_orch.web" = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "ldap3.*"  # ldap3 ships no py.typed marker
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
